firewall/ip6tables.rules
# Generated by ip6tables-save v1.8.5 on Thu Oct 22 15:45:57 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [828:144630]
:TCP - [0:0]
:UDP - [0:0]

-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -s fe80::/10 -p ipv6-icmp -j ACCEPT

-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT


#for DHCPv6
-A INPUT -p udp -m udp --sport 547 --dport 546 -j ACCEPT

# for samba
# -A INPUT -m state --state NEW -m tcp -p tcp --dport 139 -j ACCEPT
# -A INPUT -m state --state NEW -m tcp -p tcp --dport 445 -j ACCEPT

#for vnc
#-A INPUT -p tcp -m state --state NEW -m tcp --dport 5900:5906 -j ACCEPT

#for kms server
#-A INPUT -p tcp -m tcp --dport 1688 -j ACCEPT
#-A INPUT -p udp -m udp --dport 1688 -j ACCEPT


-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 128 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -j REJECT --reject-with icmp6-adm-prohibited
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp6-adm-prohibited
COMMIT
# Completed on Thu Oct 22 15:45:57 2020
