firewall/iptables.rules
# iptables.rules
*nat
:PREROUTING ACCEPT [535:55398]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

#for ftp-server
#-A PREROUTING -d 192.168.100.66/32 -p tcp -j DNAT --to-destination 192.168.0.66
#-A POSTROUTING -d 192.168.0.66/32 -p tcp -j SNAT --to-source 192.168.0.20

-A POSTROUTING  -s 192.168.0.0/24  -o ens35 -j MASQUERADE
-A POSTROUTING  -s 192.168.60.0/24 -o ens35 -j MASQUERADE
-A POSTROUTING  -s 192.168.0.0/24  -o ens34 -j MASQUERADE
-A POSTROUTING  -s 192.168.60.0/24 -o ens34 -j MASQUERADE
-A POSTROUTING  -s 192.168.60.0/24 -o ens32 -j MASQUERADE
#-A POSTROUTING  -s 192.168.100.0/24 -o ens32 -j MASQUERADE
COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT

#for ssh server
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT

#for dns server
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT

#for kms server
-A INPUT -p tcp -m tcp --dport 1688 -j ACCEPT
-A INPUT -p udp -m udp --dport 1688 -j ACCEPT


#for ss server
-A INPUT -p tcp -m tcp --dport 1080 -j ACCEPT
-A INPUT -p udp -m udp --dport 1080 -j ACCEPT

# for dhcp server
-A INPUT -p udp -m udp --dport 67 -j ACCEPT

# for http server
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i ppp+ -j ACCEPT

# for samba
-A INPUT -m state --state NEW -m tcp -p tcp --dport 139 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 445 -j ACCEPT

# Accept incoming connections to port 1723 (PPTP)
-A INPUT -i ens35 -p tcp --dport 1723 -j ACCEPT
-A INPUT -p gre -j ACCEPT

# vnc server
#-A INPUT -p tcp -m state --state NEW -m tcp --dport 5900:5906 -j ACCEPT

-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -o ens32 -j ACCEPT
-A FORWARD -o ens34 -j ACCEPT
-A FORWARD -o ens35 -j ACCEPT
-A FORWARD -o ppp+  -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

-A OUTPUT -o ppp+ -j ACCEPT
-A OUTPUT -p gre -j ACCEPT
COMMIT
